--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: 'yourbot-token'
+token: '6925848426:AAFfDLHcvTNY9Qq2_xCDiM7wUr-BHtVjnf0'
 blacklisted: '510805 434258 434256 601149 379248'
 prefix: '/!.'
 owner: 5388501342
